--- a/index.html
+++ b/index.html
@@ -9,7 +9,36 @@
   </head>
   <body>
     <section class="sec">
-      <header></header>
+      <header>
+        <a href="#"><img src="./images/logo.png" class="logo" /></a>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">What's New</a></li>
+          <li><a href="#">Newsletter</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </header>
+      <div class="content">
+        <div class="textBox">
+          <h2>That's What<br /><span>I Like</span></h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Consectetur, adipisci. Quae ad sint omnis quibusdam, quos unde, odio
+            nisi numquam nam animi, temporibus iste sed recusandae error impedit
+            cum dolorum?
+          </p>
+          <a href="#">View All Products</a>
+        </div>
+        <div class="imgBox">
+          <img src="./images/pepsi001.png" class="pepsi" />
+        </div>
+      </div>
+      <ul class="thumb">
+        <li><img src="./images/pepsi001.png" /></li>
+        <li><img src="./images/pepsi002.png" /></li>
+        <li><img src="./images/pepsi003.png" /></li>
+      </ul>
     </section>
   </body>
 </html>
