--- a/index.html
+++ b/index.html
@@ -35,10 +35,38 @@
         </div>
       </div>
       <ul class="thumb">
-        <li><img src="./images/pepsi001.png" /></li>
-        <li><img src="./images/pepsi002.png" /></li>
-        <li><img src="./images/pepsi003.png" /></li>
+        <li>
+          <img
+            src="./images/pepsi001.png"
+            onclick="imgSlider('pepsi001.png'); changeBgColor('#0062be')"
+          />
+        </li>
+        <li>
+          <img
+            src="./images/pepsi002.png"
+            onclick="imgSlider('pepsi002.png'); changeBgColor('#e60c2c')"
+          />
+        </li>
+        <li>
+          <img
+            src="./images/pepsi003.png"
+            onclick="imgSlider('pepsi003.png'); changeBgColor('#1e1e1e')"
+          />
+        </li>
+      </ul>
+      <ul class="sci">
+        <li>
+          <a href="#"><img src="./images/facebook.png" alt="" /></a>
+        </li>
+        <li>
+          <a href="#"><img src="./images/twitter.png" alt="" /></a>
+        </li>
+        <li>
+          <a href="#"><img src="./images/instagram.png" alt="" /></a>
+        </li>
       </ul>
     </section>
+
+    <script src="./js/script.js"></script>
   </body>
 </html>
