--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <section class="sec">
       <header>
         <a href="#"><img src="./images/logo.png" class="logo" /></a>
-        <ul>
+        <div class="toggleMenu" onclick="toggleMenu();"></div>
+        <ul class="navigation">
           <li><a href="#">Home</a></li>
           <li><a href="#">Products</a></li>
           <li><a href="#">What's New</a></li>
